[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.4"
ethers-contract = "2.0.4"
ethers-solc = "2.0.4"
rand = "0.8.5"
tokio = {version = "1.28.1", features = ["full"] }
serde_json = "1.0.96"
serde = "1.0.163"
openssl = "0.10.52"
hmac-sha256 = "1.1.6"
secp256k1 = { version = "0.27.0", features = ["rand"] }
base64 = "0.21.2"
ethers-core = "2.0.5"
